--- a/WebBTL/Areas/Admin/Views/AdminProducts/Index.cshtml
+++ b/WebBTL/Areas/Admin/Views/AdminProducts/Index.cshtml
@@ -17,7 +17,7 @@
                 @Html.DropDownList("TrangThai", (IEnumerable<SelectListItem>)ViewData["IsTrangThai"], "Chọn trạng thái", new { @class = "custom-select", @style = "min-width: 180px; max-width: 30%", id = "TrangThai" })
             </div>
             <div class="form-group mr-3">
-                <input type="text" name="searchTerm" value="@ViewBag.SearchTerm" class="form-control" placeholder="Search by title" />
+                <input type="text" name="searchTerm" value="@ViewBag.SearchTerm" class="form-control" placeholder="Tim kiem theo ma the loai dia chi" />
             </div>
             <br />
             <div class="form-group">
