--- a/WebBTL/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebBTL/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="~/Content/clients/plugins/dropzone/min/dropzone.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/Content/clients/dist/css/adminlte.min.css">
+
+    <link href="~/Content/Themes/style.css" rel="stylesheet" />
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
@@ -396,10 +398,10 @@
         </div>
         <!-- /.content-wrapper -->
         <footer class="main-footer">
-            <div class="float-right d-none d-sm-block">
-                <b>Version</b> 3.2.0
+            <div class="row">
+                <img src="~/Content/images/logoFooter.png" alt="Alternate Text" style="width:100%; max-width:100px; margin-left:20px"/>
+                <p style="margin:0 auto ">EONON PRO – Thương hiệu hàng đầu về màn hình giải trí ô tô thông minh.</p>
             </div>
-            <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
         </footer>
 
         <!-- Control Sidebar -->
