--- a/WebBTL/Views/Home/Index.cshtml
+++ b/WebBTL/Views/Home/Index.cshtml
@@ -136,11 +136,12 @@
 
 <section>
     <div class="container">
+        <br />
         <div class="row">
-            <div class=" col-md-6 mt-sm-5  ">
-                <iframe width="100%" height="350" src="https://www.youtube.com/embed/dW5LC2i7Xlo?si=3bYvbg0z7hq-hzgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="col-sm-6 col-md-6 mt-sm-5  col-6 col-lg-6 col-xl-6 col-xxl-6">
+                <iframe width="100%" style="max-width:670px;" height="350" src="https://www.youtube.com/embed/dW5LC2i7Xlo?si=3bYvbg0z7hq-hzgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-            <div class="col-md-6 ">
+            <div class="col-md-6 col-sm-6 col-6 col-lg-6 col-xl-6 col-xxl-6">
                 <a href="#">
                     <img src="~/Content/images/logo.png" width="20%" />
                 </a>
