--- a/WebBTL/Areas/Admin/Views/AdminProducts/Index.cshtml
+++ b/WebBTL/Areas/Admin/Views/AdminProducts/Index.cshtml
@@ -6,30 +6,30 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-<div class="container">
-    <h2>Product</h2>
-    <form method="post" class="row">
-        <form method="get" class="row">
-            <div class="form-group mr-3">
-                @Html.DropDownList("CategoryId", (SelectList)ViewData["DanhMuc"], "Chọn thể loại", new { @class = "custom-select", @style = "min-width: 180px; max-width: 30%", id = "CategoryId" })
-            </div>
-            <div class="form-group mr-3">
-                @Html.DropDownList("TrangThai", (IEnumerable<SelectListItem>)ViewData["IsTrangThai"], "Chọn trạng thái", new { @class = "custom-select", @style = "min-width: 180px; max-width: 30%", id = "TrangThai" })
-            </div>
-            <div class="form-group mr-3">
-                <input type="text" name="searchTerm" value="@ViewBag.SearchTerm" class="form-control" placeholder="Tim kiem theo ma the loai dia chi" />
-            </div>
-            <br />
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Lọc</button>
-            </div>
+<div class="container-fluid">
+    <div class="ml-5">
+        <h2>Product</h2>
+        <form method="post" class="row">
+            <form method="get" class="row">
+               
+                <div class="form-group mr-3">
+                    @Html.DropDownList("TrangThai", (IEnumerable<SelectListItem>)ViewData["IsTrangThai"], " Trạng thái", new { @class = "form-control", @style = "min-width: 180px; max-width: 30%", id = "TrangThai" })
+                </div>
+                <div class="form-group mr-3">
+                    <input type="text" name="searchTerm" value="@ViewBag.SearchTerm" class="form-control" placeholder="Tên sản phẩm" />
+                </div>
+                <br />
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Lọc</button>
+                </div>
 
-        </form>
-        <div class="d-flex justify-content-end">
-            @Html.ActionLink("Create New", "Create",null, new {@class = "btn btn-primary"})
-        </div>
+            </form>
+    </div>
+    <div class="d-flex justify-content-end container">
+        @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
+    </div>
     </form>
-    
+
     <br />
     <table class="table">
         <tr>
@@ -37,7 +37,7 @@
                 Product ID
             </th>
             <th>
-               Product Name
+                Product Name
             </th>
             <th>
                 Price
@@ -46,14 +46,12 @@
                 Discount
             </th>
             <th>
-                UnitsInStock
+                So luong
             </th>
             <th>
                 Active
             </th>
-            <th>
-                Cat Name
-            </th>
+            
             <th class="text-center">#</th>
         </tr>
 
@@ -73,26 +71,24 @@
                 <td>
                     @String.Format("{0:N0} VND", item.Discount)
                 </td>
-                <td>
+                <td class="text-ce">
                     @Html.DisplayFor(modelItem => item.UnitsInStock)
                 </td>
                 <td>
                     @if (item.UnitsInStock > 0)
                     {
-                        <span class="badge badge-success">InStock</span>
+                        <span class="badge badge-success" >  Instock</span>
                     }
-                    else
+                    else if(item.UnitsInStock == 0)
                     {
-                        <span class="badge badge-danger">OutStock</span>
+                        <span class="badge badge-danger" > Outstock</span>
                     }
                 </td>
+                
                 <td>
-                    @Html.DisplayFor(modelItem => item.Category.CatName)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ProductID }, new { @class = "btn btn-primary" })
-                    @Html.ActionLink("Details", "Details", new { id = item.ProductID }, new { @class = "btn btn-primary" })
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ProductID }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ProductID }, new { @class = "btn btn-outline-primary" })
+                    @Html.ActionLink("Details", "Details", new { id = item.ProductID }, new { @class = "btn btn-outline-info" })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ProductID }, new { @class = "btn btn-outline-warning" })
 
                 </td>
             </tr>
