--- a/WebBTL/Areas/Admin/Views/AdminProducts/Details.cshtml
+++ b/WebBTL/Areas/Admin/Views/AdminProducts/Details.cshtml
@@ -22,6 +22,15 @@
             </div>
             <div class="row">
                 <dt class="col-sm-4 col-md-4">
+                    @Html.DisplayNameFor(model => model.Thumb)
+                </dt>
+
+                <dd class="col-sm-4 col-md-4">
+                    @Html.DisplayFor(model => model.Thumb)
+                </dd>
+            </div>
+            <div class="row">
+                <dt class="col-sm-4 col-md-4">
                     @Html.DisplayNameFor(model => model.ShortDesc)
                 </dt>
 
