--- a/WebBTL/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebBTL/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -343,7 +343,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    @Html.ActionLink("Quyền truy cập", "Index", "Roles", null, new { @class = "nav-link" })
+                                    @Html.ActionLink("Quyền truy cập", "Index", "AdminRoles", null, new { @class = "nav-link" })
                                 </li>
                                 <li class="nav-item">
                                     <a href="../widgets.html" class="nav-link">
